--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    background: url("/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
